# IN2222_TU_CR

./: .gitignore  README
cogsys_panda/src/camera/: package.xml
cogsys_panda/src/camera/config/: cam.xml
cogsys_panda/src/camera/src/: ConfigData.cpp  main.cpp
cogsys_panda/src/camera/src/camInput/: Cam.cpp  CamGigE.cpp  CamOpenCV.cpp
cogsys_panda/src/camera_dummy/: package.xml
cogsys_panda/src/camera_dummy/config/: cam.xml
cogsys_panda/src/camera_dummy/src/: ConfigData.cpp  main.cpp
cogsys_panda/src/camera_dummy/src/camInput/: Cam.cpp  CamGigE.cpp  CamOpenCV.cpp
cogsys_panda/src/demo_cogsys_cpp/: CMakeLists.txt  package.xml
cogsys_panda/src/demo_cogsys_cpp/src/: main.cpp
cogsys_panda/src/demo_cogsys_cpp_viz/: CMakeLists.txt  package.xml
cogsys_panda/src/demo_cogsys_cpp_viz/src/: main.cpp  main_session4.cpp
cogsys_panda/src/messages_services/action_msgs/: package.xml
cogsys_panda/src/messages_services/actor_msgs/: package.xml
cogsys_panda/src/messages_services/camera_srvs/: package.xml
cogsys_panda/src/messages_services/device_msgs/: package.xml
cogsys_panda/src/messages_services/gripper_control_srvs/: package.xml
cogsys_panda/src/messages_services/perception_msgs/: package.xml
cogsys_panda/src/messages_services/perception_srvs/: package.xml
cogsys_panda/src/messages_services/prod_master_srvs/: CMakeLists.txt  package.xml
cogsys_panda/src/messages_services/prod_master_srvs/srv/: ComputedTransformation.srv
cogsys_panda/src/messages_services/robot_control_srvs/: package.xml
cogsys_panda/src/messages_services/robotino_controller/: CMakeLists.txt  package.xml
cogsys_panda/src/messages_services/robotino_controller/msg/: shape.msg
cogsys_panda/src/messages_services/robotino_controller/srv/: GetObjects.srv  MoveToGripper.srv  Rotate.srv
cogsys_panda/src/messages_services/shape_detect_srvs/: CMakeLists.txt  package.xml
cogsys_panda/src/messages_services/shape_detect_srvs/msg/: shape.msg
cogsys_panda/src/messages_services/shape_detect_srvs/srv/: shape_vec.srv
cogsys_panda/src/messages_services/speech_recognition_msgs/: package.xml
cogsys_panda/src/messages_services/speech_recognition_srvs/: package.xml
cogsys_panda/src/messages_services/world_model_srvs/: package.xml
cogsys_panda/src/object_detector/: package.xml
cogsys_panda/src/object_detector/configData/: config.ini
cogsys_panda/src/object_detector/src/: main.cpp
cogsys_panda/src/object_detector/src/detector/: Detector.cpp  DetectorThread.cpp
cogsys_panda/src/prod_master/: CMakeLists.txt  offset_calc.txt  package.xml
cogsys_panda/src/prod_master/config_data/: config.ini  obj_req.ini  production.ini
cogsys_panda/src/prod_master/include/bot_controller/: bot_controller.h
cogsys_panda/src/prod_master/include/prod_master/: prod_master.h
cogsys_panda/src/prod_master/include/robotino_controller/: robotino_controller.h
cogsys_panda/src/prod_master/include/shapes_detector/: shape_detector.h  shapes_detector.h
cogsys_panda/src/prod_master/src/: main.cpp  main_for_testing.cpp
cogsys_panda/src/prod_master/src/bot_controller/: bot_controller.cpp
cogsys_panda/src/prod_master/src/prod_master/: prod_master.cpp
cogsys_panda/src/prod_master/src/robotino_controller/: robotino_controller.cpp
cogsys_panda/src/prod_master/src/shape_detector/: shapes_detector.cpp
cogsys_panda/src/prod_master/src/shapes_detector/: shapes_detector.cpp
cogsys_panda/src/rosjava_msgs_srvs/: package.xml
cogsys_panda/src/rosjava_projects/: package.xml
cogsys_panda/src/rosjava_projects/demo_cogsys_java/src/main/java/de/tum/i6/cogsys/: Demo.java  RosWrapper.java
cogsys_panda/src/rosjava_projects/demo_cogsys_java/src/main/java/de/tum/i6/cogsys/msgs/: DetectedObjectsSubscriberFactory.java  RecognizedSpeechSubscriberFactory.java
cogsys_panda/src/rosjava_projects/demo_cogsys_java/src/main/java/de/tum/i6/cogsys/srvs/: CambotMoveJointsRequestBuilderFactory.java  CambotMoveToCSRequestBuilderFactory.java  CloseGripperRequestBuilderFactory.java  GetTransformRequestBuilderFactory.java  GripperbotMoveJointsRequestBuilderFactory.java  GripperbotMoveToCSRequestBuilderFactory.java  MoveJointsRequestBuilderFactory.java  MoveToCSRequestBuilderFactory.java  OpenGripperRequestBuilderFactory.java  TurnOffMicRequestBuilderFactory.java  TurnOnMicRequestBuilderFactory.java
cogsys_panda/src/rosjava_projects/speech_recognition/config/: config.xml
cogsys_panda/src/rosjava_projects/speech_recognition/grammar/: grammar.gram
cogsys_panda/src/rosjava_projects/speech_recognition/src/main/java/org/smerobotics/speech/recognition/: InterruptDataProcessor.java  RosWrapper.java  SpeechRecListener.java  SpeechRecognizer.java
cogsys_panda/src/rosjava_projects/utility/src/main/java/org/smerobotics/util/: Util.java
cogsys_panda/src/rosjava_projects/utility/src/main/java/org/smerobotics/util/msg/: PublisherFactory.java  SubscriberFactory.java
cogsys_panda/src/rosjava_projects/utility/src/main/java/org/smerobotics/util/srv/: ServiceRequestBuilderFactory.java  ServiceResponseBuilderFactory.java
cogsys_panda/src/shape_detect/: CMakeLists.txt  package.xml
cogsys_panda/src/shape_detect/src/: main.cpp  main.h
cogsys_panda/src/shape_detect/src/detector_classes/: HSV_Param.cpp  HSV_Param.h  Shape.cpp  Shape.h  shapes_detector.cpp  shapes_detector.h
cogsys_panda/src/trans_cam_to_gripper/: CMakeLists.txt  package.xml
cogsys_panda/src/trans_cam_to_gripper/include/: main.h
cogsys_panda/src/trans_cam_to_gripper/src/: main.cpp
cogsys_panda/src/world_model/: CMakeLists.txt  package.xml
cogsys_panda/src/world_model/src/: main.cpp  main_session4.cpp  tflistener_helper.cpp
